--- a/conf/.env
+++ b/conf/.env
@@ -11,7 +11,7 @@ MICROBIN_HIDE_HEADER=false
 MICROBIN_HIDE_FOOTER=true
 MICROBIN_HIDE_LOGO=false
 MICROBIN_NO_LISTING=false
-MICROBIN_READONLY=false
+MICROBIN_READONLY=true
 MICROBIN_SHOW_READ_STATS=true
 MICROBIN_THREADS=1
 MICROBIN_GC_DAYS=90
