--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -19,7 +19,7 @@ Environment="MICROBIN_HIDE_HEADER=false"
 Environment="MICROBIN_HIDE_FOOTER=true"
 Environment="MICROBIN_HIDE_LOGO=false"
 Environment="MICROBIN_NO_LISTING=false"
-Environment="MICROBIN_READONLY=false"
+Environment="MICROBIN_READONLY=true"
 Environment="MICROBIN_SHOW_READ_STATS=true"
 Environment="MICROBIN_THREADS=1"
 Environment="MICROBIN_GC_DAYS=90"
