--- a/conf/.env
+++ b/conf/.env
@@ -96,7 +96,7 @@ export MICROBIN_PURE_HTML=false
 # Sets the name of the directory where MicroBin creates 
 # its database and stores attachments.
 # Default value: microbin_data
-export MICROBIN_DATA_DIR="microbin_data"
+export MICROBIN_DATA_DIR="__DATA_DIR__"
 
 # Enables storing pasta data (not attachments and files) in
 # a JSON file instead of the SQLite database. 
@@ -109,7 +109,7 @@ export MICROBIN_JSON_DB=false
 # as without this option, and thus is unsuited if you are
 # running MicroBin directly. Default value: unset. Example
 # values: https://myserver.com/ or https://192.168.0.10:8080/ 
-# export MICROBIN_PUBLIC_PATH=https://__DOMAIN____PATH__/
+export MICROBIN_PUBLIC_PATH=https://__DOMAIN____PATH__/
 
 # Sets a shortened path to use when the user copies URL from
 # the application. This will also use shorter endpoints,
