--- a/conf/.env
+++ b/conf/.env
@@ -48,21 +48,21 @@ MICROBIN_EDITABLE=true
 # MICROBIN_FOOTER_TEXT=
 
 # Hides the navigation bar on every page.
-# Default value: 8080 
+# Default value: false
 MICROBIN_HIDE_HEADER=false
 
 # Hides the footer on every page.
-# Default value: 8080 
+# Default value: false 
 MICROBIN_HIDE_FOOTER=false
 
 # Hides the MicroBin logo from the navigation bar on every
 # page.
-# Default value: 8080 
+# Default value: false
 MICROBIN_HIDE_LOGO=false
 
 # Disables the /pastalist endpoint, essentially making all
 # pastas private.
-# Default value: 8080 
+# Default value: false
 MICROBIN_NO_LISTING=false
 
 # Enables syntax highlighting support. When creating a new
