--- a/conf/.env
+++ b/conf/.env
@@ -109,7 +109,7 @@ MICROBIN_JSON_DB=false
 # as without this option, and thus is unsuited if you are
 # running MicroBin directly. Default value: unset. Example
 # values: https://myserver.com/ or https://192.168.0.10:8080/ 
-MICROBIN_PUBLIC_PATH=https://__DOMAIN____PATH__/
+MICROBIN_PUBLIC_PATH=https://__DOMAIN__/
 
 # Sets a shortened path to use when the user copies URL from
 # the application. This will also use shorter endpoints,
