--- a/conf/.env
+++ b/conf/.env
@@ -32,7 +32,7 @@ MICROBIN_ADMIN_USERNAME=__ADMIN__
 # set but admin password is not, just leave the password
 # field empty when logging in. 
 # Default value: m1cr0b1n
-MICROBIN_ADMIN_PASSWORD=__PASSWORD__
+MICROBIN_ADMIN_PASSWORD="__PASSWORD__"
 
 # Enables editable pastas. You will still be able to make
 # finalised pastas but there will be an extra checkbox to
